Fixed HTML validation error

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="popUpStyles.css" />
@@ -12,15 +10,14 @@
   </head>
 
   <body>
-    <div class="wrapper showing">
-      <main>
+    <main>
+      <div class="wrapper showing">
         <div id="popup" class="popup">
           <a href="#" class="popup__area"></a>
           <div class="popup__body">
             <div class="popup__content">
               <a href="#" class="popup__close close-popup">X</a>
-              <div class="popup__title">
-              </div>
+              <div class="popup__title"></div>
               <div class="popup__text">
                 <img
                   class="popup__avatar"
@@ -31,9 +28,7 @@
             </div>
           </div>
         </div>
-            </div>
-          </div>
-        </div>
+
         <div class="resume">
           <div class="container">
             <div class="resume__block">
@@ -108,7 +103,12 @@
                     target="_blank"
                   >
                     <div class="contact-info__item-icon-wrapper">
-                      <img src="./assets/git.png" width="20px" height="20px" />
+                      <img
+                        src="./assets/git.png"
+                        width="20"
+                        height="20"
+                        alt="git"
+                      />
                     </div>
                     <span>Stanislav`s GitHub</span>
                   </a>
@@ -305,9 +305,7 @@
                         >2023 septemper - June 2024</span
                       >
                       <p class="additional-info__education-university-name">
-                        <a
-                          href="https://www.rcl.ac.uk/"
-                         
+                        <a href="https://www.rcl.ac.uk/"
                           >Regent College London</a
                         >
                       </p>
@@ -324,9 +322,7 @@
                         >2023 septemper - June 2024</span
                       >
                       <p class="additional-info__education-university-name">
-                        <a
-                          href="https://www.escg.ac.uk/"
-                        
+                        <a href="https://www.escg.ac.uk/"
                           >East Sussex College</a
                         >
                       </p>
@@ -349,7 +345,7 @@
             </div>
           </div>
         </div>
-      </main>
-    </div>
+      </div>
+    </main>
   </body>
 </html>
